# xiaozhi-esp32-server-rust

./: .gitattributes  .gitignore  Cargo.toml  README.md  test-manager-out.txt  tmp_uconfig.json
.cargo/: config.toml
config/: config.yaml
crates/xiaozhi-asr/: Cargo.toml
crates/xiaozhi-asr/src/: aliyun.rs  aliyun_qwen3.rs  doubao.rs  factory.rs  funasr.rs  lib.rs  traits.rs  ws_session.rs  xunfei.rs
crates/xiaozhi-auth/: Cargo.toml
crates/xiaozhi-auth/src/: activation.rs  jwt.rs  lib.rs  manager_ws.rs  ota_signature.rs
crates/xiaozhi-chat/: Cargo.toml
crates/xiaozhi-chat/src/: asr_manager.rs  audio_idle.rs  chat_queue.rs  detect.rs  device_mcp.rs  endpoint_hub.rs  knowledge.rs  lib.rs  llm_manager.rs  llm_types.rs  manager.rs  mcp_tool_media.rs  mcp_tools.rs  media_coordinator.rs  media_player.rs  openclaw_warmup.rs  opus_codec.rs  outbound.rs  pipeline.rs  play_music.rs  realtime_media_gate.rs  resource_pools.rs  sentence.rs  session.rs  session_lifecycle.rs  session_media.rs  signal_log.rs  speak_path.rs  state.rs  tts_manager.rs  tts_turn_policy.rs  voice_status.rs
crates/xiaozhi-config/: Cargo.toml
crates/xiaozhi-config-provider/: Cargo.toml
crates/xiaozhi-config-provider/src/: lib.rs  manager.rs  redis.rs  traits.rs
crates/xiaozhi-config/src/: lib.rs  loader.rs  manager_endpoint.rs  provider_resolve.rs  system.rs  user.rs
crates/xiaozhi-core/: Cargo.toml
crates/xiaozhi-core/src/: cloud.rs  constants.rs  error.rs  lib.rs
crates/xiaozhi-eventbus/: Cargo.toml
crates/xiaozhi-eventbus/src/: lib.rs
crates/xiaozhi-history/: Cargo.toml
crates/xiaozhi-history/src/: client.rs  lib.rs
crates/xiaozhi-hooks/: Cargo.toml
crates/xiaozhi-hooks/src/: lib.rs  manager.rs  statistic.rs
crates/xiaozhi-llm/: Cargo.toml
crates/xiaozhi-llm/src/: completion.rs  coze.rs  dify.rs  factory.rs  lib.rs  llm_common.rs  message.rs  openai.rs  openai_stream.rs  sse_stream.rs  traits.rs
crates/xiaozhi-logging/: Cargo.toml
crates/xiaozhi-logging/src/: config.rs  db.rs  lib.rs
crates/xiaozhi-manager/: Cargo.toml
crates/xiaozhi-manager/data/: qwen_voices_by_model.json  voice_options.json
crates/xiaozhi-manager/src/: app.rs  auth.rs  captcha.rs  db.rs  extractors.rs  knowledge_global.rs  knowledge_search.rs  knowledge_search_test.rs  knowledge_sync.rs  knowledge_upload.rs  main.rs  mcp_config_test.rs  mcp_imported_merge.rs  mcp_market.rs  network.rs  openclaw_sse.rs  ota_test.rs  pool_stats.rs  speaker_client.rs  system_configs.rs  uconfig_builder.rs  voice_clone_api.rs  voice_clone_doubao.rs  voice_clone_preview.rs  voice_clone_validate.rs  voice_clone_worker.rs  voice_constants.rs  voice_options.rs  weknora_models.rs  ws.rs
crates/xiaozhi-manager/src/handlers/: agent_devices.rs  agents.rs  api_tokens.rs  auth.rs  captcha.rs  config.rs  dashboard.rs  device_simulator.rs  devices.rs  history.rs  internal.rs  knowledge.rs  mcp.rs  mod.rs  pool.rs  roles.rs  setup.rs  speakers.rs  users.rs  voice.rs  ws.rs
crates/xiaozhi-mcp/: Cargo.toml
crates/xiaozhi-mcp/src/: discover.rs  global_hub.rs  lib.rs  local_tools.rs  manager.rs  streamable_http.rs  tool_name.rs  types.rs
crates/xiaozhi-memory/: Cargo.toml
crates/xiaozhi-memory/src/: factory.rs  lib.rs  mem0.rs  memobase.rs  memos.rs  nomemo.rs  traits.rs
crates/xiaozhi-mqtt-server/: Cargo.toml
crates/xiaozhi-mqtt-server/src/: device.rs  hooks.rs  lib.rs
crates/xiaozhi-music/: Cargo.toml
crates/xiaozhi-music/src/: lib.rs  player.rs
crates/xiaozhi-openclaw/: Cargo.toml
crates/xiaozhi-openclaw/src/: agent_session.rs  chat_test.rs  delivery.rs  lib.rs  manager.rs  protocol.rs  stream.rs  token.rs
crates/xiaozhi-pool/: Cargo.toml
crates/xiaozhi-pool/src/: fingerprint.rs  lib.rs  pool.rs  registry.rs  stats.rs
crates/xiaozhi-protocol/: Cargo.toml
crates/xiaozhi-protocol/src/: audio.rs  binary_audio.rs  lib.rs  messages.rs  mqtt.rs
crates/xiaozhi-rag/: Cargo.toml
crates/xiaozhi-rag/src/: client.rs  factory.rs  lib.rs  local.rs  traits.rs
crates/xiaozhi-server/: Cargo.toml
crates/xiaozhi-server/src/: app.rs  config_test.rs  device_handler.rs  main.rs  manager_client.rs  mcp_api.rs  mcp_ws.rs  mqtt_runtime.rs  mqtt_service.rs  openclaw_chat.rs  openclaw_ws.rs  shared_config.rs  vision.rs  websocket.rs
crates/xiaozhi-server/src/bridge/: dispatcher.rs  mod.rs  types.rs
crates/xiaozhi-speaker/: Cargo.toml
crates/xiaozhi-speaker/src/: asr_server.rs  factory.rs  lib.rs  traits.rs
crates/xiaozhi-transport/: Cargo.toml
crates/xiaozhi-transport/src/: conn.rs  lib.rs  mqtt_udp.rs  udp.rs  websocket.rs
crates/xiaozhi-tts/: Cargo.toml
crates/xiaozhi-tts/src/: aliyun_qwen.rs  audio_decoder.rs  cosyvoice.rs  doubao.rs  doubao_http.rs  doubao_model.rs  doubao_v3_ws.rs  doubao_ws.rs  edge.rs  edge_offline.rs  factory.rs  http_client.rs  lib.rs  minimax.rs  openai.rs  providers.rs  traits.rs  volcengine_protocol.rs  xiaozhi.rs  xunfei.rs  zhipu.rs
crates/xiaozhi-vad/: Cargo.toml  build.rs
crates/xiaozhi-vad/src/: factory.rs  ffi.rs  lib.rs  silero_vad.rs  ten_vad.rs  traits.rs  webrtc.rs
doc/: DEVICE_INTERACTION_FLOW.md  IMPLEMENTATION_STATUS.md  MULTI_ENDPOINT.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: diagnose.js
frontend/src/components/: AppHeader.vue  Layout.vue  MobileLayout.vue  MobileTabBar.vue
frontend/src/components/admin/: DeviceDebugDrawer.vue
frontend/src/components/chat/: ChatHistoryView.vue  ChatSessionDetailView.vue  ChatSessionsView.vue
frontend/src/components/common/: AgentForm.vue  (+1 more)
frontend/src/composables/: useAgentFormOptions.js  useChatHistory.js  useChatSessions.js  useDeviceChatSimulator.js  useDeviceDebug.js  useDeviceLiveStatus.js  useMcpToolGroups.js  useWorkspaceSwitch.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/utils/: api.js  configTest.js  device.js  deviceStatus.js  mcpAuthHeaders.js  opusTtsPlayer.js  sse.js
frontend/src/views/: Login.vue  Setup.vue
scripts/: _tmp_mcp_out.txt  _tmp_query_mcp.py  build-opus.ps1  gen_voice_options.py  mcp_dump.json
(+38 files in other folders)
