[package]
name = "xiaozhi-asr"
version.workspace = true
edition.workspace = true

[dependencies]
xiaozhi-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
reqwest.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
base64.workspace = true
hmac.workspace = true
sha2.workspace = true
chrono.workspace = true
uuid.workspace = true
flate2 = "1"
futures-util = "0.3"
