[package]
name = "xiaozhi-llm"
version.workspace = true
edition.workspace = true

[dependencies]
xiaozhi-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
base64.workspace = true
futures.workspace = true
sha2.workspace = true
hex.workspace = true
