[package]
name = "xiaozhi-manager"
version.workspace = true
edition.workspace = true

[[bin]]
name = "xiaozhi-manager"
path = "src/main.rs"

[dependencies]
xiaozhi-core.workspace = true
xiaozhi-config.workspace = true
xiaozhi-llm.workspace = true
xiaozhi-logging.workspace = true
xiaozhi-openclaw.workspace = true
xiaozhi-mcp.workspace = true
xiaozhi-rag.workspace = true

tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
jsonwebtoken.workspace = true
tracing.workspace = true
clap.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
parking_lot = "0.12"
bcrypt = "0.16"
rand = "0.8"
futures-util = "0.3"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "multipart"] }
urlencoding = "2"
sha2 = "0.10"
url = "2"
hex.workspace = true
tokio-tungstenite.workspace = true
rumqttc.workspace = true
