[package]
name = "xiaozhi-openclaw"
version.workspace = true
edition.workspace = true

[dependencies]
xiaozhi-core.workspace = true
xiaozhi-config.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true
chrono.workspace = true
