[package]
name = "xiaozhi-rag"
version.workspace = true
edition.workspace = true

[dependencies]
xiaozhi-core.workspace = true
xiaozhi-config.workspace = true
xiaozhi-config-provider.workspace = true
async-trait.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
