[package]
name = "xiaozhi-tts"
version.workspace = true
edition.workspace = true

[dependencies]
xiaozhi-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
reqwest.workspace = true
tracing.workspace = true
base64.workspace = true
uuid.workspace = true
chrono.workspace = true
hmac.workspace = true
sha2.workspace = true
tokio-tungstenite.workspace = true
futures-util = "0.3"
hex.workspace = true
flate2 = "1"
minimp3 = "0.5"
opus.workspace = true
